[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://EndHUD.tscn" type="PackedScene" id=2]

[sub_resource type="ProceduralSky" id=12]
radiance_size = 0
sky_top_color = Color( 0.976471, 0.247059, 0.0509804, 1 )
sky_horizon_color = Color( 0.929412, 0.537255, 0.117647, 1 )
ground_bottom_color = Color( 0.976471, 0.247059, 0.0509804, 1 )
ground_horizon_color = Color( 0.929412, 0.537255, 0.117647, 1 )
ground_curve = 0.09
ground_energy = 0.33
sun_angle_max = 8.36
sun_curve = 10.8185
sun_energy = 0.0

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 12 )
ss_reflections_max_steps = 512
ss_reflections_fade_out = 9.2512e-05
glow_intensity = 0.53

[node name="EndScreen" type="Spatial"]
script = ExtResource( 1 )

[node name="EndHUD" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.825399, -0.564549, 0, 0.564549, 0.825399, 0, 0, 0 )
environment = SubResource( 11 )
far = 10000.0
