[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://obelisk.tscn" type="PackedScene" id=3]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://ObeliskLight.gd" type="Script" id=6]
[ext_resource path="res://Portal.gd" type="Script" id=7]
[ext_resource path="res://LightSphere.tscn" type="PackedScene" id=8]
[ext_resource path="res://DeathPlane.tscn" type="PackedScene" id=9]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Deposit.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Collect.wav" type="AudioStream" id=12]
[ext_resource path="res://ElectricField.tscn" type="PackedScene" id=13]
[ext_resource path="res://button.tscn" type="PackedScene" id=14]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Shock.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Press.wav" type="AudioStream" id=17]

[node name="Level2" type="Spatial"]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 15 )]

[node name="platform" parent="." instance=ExtResource( 4 )]
transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 7, 1, 48, 2 )

[node name="platform2" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 7, 1, 54.9733, 24.9537 )

[node name="platform3" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, -3.17116, 66.2729, 29.7977 )

[node name="platform10" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, -3.17116, 66.2729, 63.1103 )

[node name="platform12" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 8, 0.887703, 66.2729, 89.3642 )

[node name="platform13" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 8, 0.766955, 81.6942, 87.584 )

[node name="platform14" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.849563, 74.0823, 106.949 )

[node name="platform15" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.78027, 83.9259, 73.4982 )

[node name="platform11" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 5.8173, 1.37293, 0, -5.49173, 1.45432, 1.00517, 66.2729, 67.4308 )

[node name="platform4" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, 5.00291, 66.2729, 29.7977 )

[node name="platform9" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, 5.00291, 66.2729, 63.0878 )

[node name="platform5" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.979333, 73.9985, 38.1871 )

[node name="platform8" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.979333, 73.9985, 55.8437 )

[node name="platform6" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76667, 73.9985, 47.2608 )

[node name="platform7" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.42614, 73.9985, 47.2608 )

[node name="platform16" parent="." instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 18.5874, 73.9985, 47.2608 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 55.2348, 0 )
script = ExtResource( 1 )

[node name="obelisk" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, -0.5, 7.54979e-08, 0, -7.54979e-08, -0.5, 0, 55.1172, -3.22029 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.724124, 0.68967, 0, -0.68967, -0.724124, 21.1376, 107.853, -75.4108 )
light_energy = 0.2

[node name="Portal" parent="." instance=ExtResource( 10 )]
transform = Transform( -7.54979e-08, 4.79963e-15, 1, -1.50996e-07, -1, -6.60024e-15, 1, -1.50996e-07, 7.54979e-08, -4.63905, 57.6532, 1.43242 )
script = ExtResource( 7 )

[node name="LightSphere" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595491, 69.2106, 95.0528 )

[node name="ObeliskLight" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0291107, 58.3675, -2.08927 )
script = ExtResource( 6 )

[node name="DeathPlane" parent="." instance=ExtResource( 9 )]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.133927, 59.4169, -3.27402 )
light_energy = 4.017
omni_range = 4.104

[node name="Deposit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="button" parent="." groups=["Buttons"] instance=ExtResource( 14 )]
transform = Transform( -0.3, 0, -4.52987e-08, 0, 0.3, 0, 4.52987e-08, 0, -0.3, 20.4859, 77.2963, 47.2608 )

[node name="ElectricField" parent="." groups=["ElectricFields"] instance=ExtResource( 13 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.821968, 71.9745, 77.2339 )

[node name="Shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
