[gd_scene load_steps=20 format=2]

[ext_resource path="res://Portal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Collect.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Deposit.wav" type="AudioStream" id=3]
[ext_resource path="res://obelisk.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://LightSphere.tscn" type="PackedScene" id=6]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=9]
[ext_resource path="res://DeathPlane.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player.gd" type="Script" id=11]
[ext_resource path="res://Level.gd" type="Script" id=13]
[ext_resource path="res://ObeliskLight.gd" type="Script" id=14]
[ext_resource path="res://Assets/Shock.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Press.wav" type="AudioStream" id=16]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=17]
[ext_resource path="res://Turret.gd" type="Script" id=18]
[ext_resource path="res://button.tscn" type="PackedScene" id=19]
[ext_resource path="res://ElectricField.tscn" type="PackedScene" id=20]

[node name="Level3" type="Spatial"]
script = ExtResource( 13 )

[node name="platform" parent="." instance=ExtResource( 9 )]
transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 7, 1, 48, 2 )

[node name="platform2" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 55.2093, 23.0872 )

[node name="platform4" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 12, 0, 0, 0, 12, 1, 61.6784, 56.2265 )

[node name="platform5" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, 4.69152, 66.0635, 38.451 )

[node name="platform6" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 8, 0, 0, 0, 2, -3.08204, 66.0635, 38.451 )

[node name="platform3" parent="." instance=ExtResource( 9 )]
transform = Transform( 12, 0, 0, 0, 2, 0, 0, 0, 2, 1, 55.2093, 38.5975 )

[node name="platform7" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 4, 9.01091, 49.1867, 50.922 )

[node name="platform10" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 4, -7.42857, 49.1867, 50.922 )

[node name="platform8" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 21.9499, 49.1867, 68.453 )

[node name="platform12" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -20.2122, 49.1867, 68.453 )

[node name="platform9" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 9.44724, 49.1867, 68.453 )

[node name="platform11" parent="." instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.02332, 49.1867, 68.453 )

[node name="obelisk" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, -0.5, 7.54979e-08, 0, -7.54979e-08, -0.5, 0, 55.1172, -3.22029 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.724124, 0.68967, 0, -0.68967, -0.724124, 21.1376, 107.853, -75.4108 )
light_energy = 0.2

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.133927, 59.4169, -3.27402 )
light_energy = 4.017
omni_range = 4.104

[node name="Portal" parent="." instance=ExtResource( 7 )]
transform = Transform( -7.54979e-08, 4.79963e-15, 1, -1.50996e-07, -1, -6.60024e-15, 1, -1.50996e-07, 7.54979e-08, -4.63905, 57.6532, 1.43242 )
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 55.2348, 0 )
script = ExtResource( 11 )

[node name="Deposit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LightSphere" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595491, 74.9079, 65.654 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="DeathPlane" parent="." instance=ExtResource( 10 )]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )

[node name="ObeliskLight" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0291107, 58.3675, -2.08927 )
script = ExtResource( 14 )

[node name="Shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="Turret" parent="." groups=["Turrets"] instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.9792, 51.1492, 68.1898 )
script = ExtResource( 18 )

[node name="Turret2" parent="." groups=["Turrets"] instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.074, 51.1492, 68.1898 )
script = ExtResource( 18 )

[node name="button" parent="." groups=["Buttons"] instance=ExtResource( 19 )]
transform = Transform( -1.31134e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.31134e-08, 9.34232, 51.4849, 69.4071 )

[node name="button2" parent="." groups=["Buttons"] instance=ExtResource( 19 )]
transform = Transform( -1.31134e-08, 0, 0.3, 0, 0.3, 0, -0.3, 0, -1.31134e-08, -8.1077, 51.4849, 69.4071 )

[node name="ElectricField" parent="." groups=["ElectricFields"] instance=ExtResource( 20 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1.00019, 81.3778, 49.8586 )

[node name="ElectricField2" parent="." groups=["ElectricFields"] instance=ExtResource( 20 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1.00019, 81.3778, 60.677 )
