[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Press.wav" type="AudioStream" id=1]
[ext_resource path="res://Portal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Collect.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Deposit.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Shock.wav" type="AudioStream" id=5]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://LightSphere.tscn" type="PackedScene" id=7]
[ext_resource path="res://DeathPlane.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://obelisk.tscn" type="PackedScene" id=11]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=12]
[ext_resource path="res://Player.gd" type="Script" id=13]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=14]
[ext_resource path="res://ObeliskLight.gd" type="Script" id=15]
[ext_resource path="res://Level.gd" type="Script" id=16]
[ext_resource path="res://ElectricField.tscn" type="PackedScene" id=17]
[ext_resource path="res://button.tscn" type="PackedScene" id=18]
[ext_resource path="res://Turret.gd" type="Script" id=19]

[node name="Level4" type="Spatial"]
script = ExtResource( 16 )

[node name="platform" parent="." instance=ExtResource( 12 )]
transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 7, 1, 48, 2 )

[node name="platform2" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 57.7709, 19.591 )

[node name="platform7" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 57.7709, 29.1284 )

[node name="platform6" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 47.745, 63.3742 )

[node name="platform12" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 15.0537, 63.1168, 63.3742 )

[node name="platform8" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 2, -3.76625, 57.8846, 63.3742 )

[node name="platform10" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 2, -3.76625, 81.2776, 63.3742 )

[node name="platform11" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 2, 5.68718, 81.2776, 63.3742 )

[node name="platform9" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 2, 5.34608, 57.8846, 63.3742 )

[node name="platform4" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 35.9425, 16.8732 )

[node name="platform5" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 30.3994, 3.40474 )

[node name="platform3" parent="." instance=ExtResource( 12 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 10, 1, 48, 43.6341 )

[node name="obelisk" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.5, 0, 0, 0, -0.5, 7.54979e-08, 0, -7.54979e-08, -0.5, 0, 55.1172, -3.22029 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.724124, 0.68967, 0, -0.68967, -0.724124, 21.1376, 107.853, -75.4108 )
light_energy = 0.2

[node name="Portal" parent="." instance=ExtResource( 6 )]
transform = Transform( -7.54979e-08, 4.79963e-15, 1, -1.50996e-07, -1, -6.60024e-15, 1, -1.50996e-07, 7.54979e-08, -4.63905, 57.6532, 1.43242 )
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 55.2348, 0 )
script = ExtResource( 13 )

[node name="Deposit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="LightSphere" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.595491, 93.061, 63.0871 )

[node name="DeathPlane" parent="." instance=ExtResource( 8 )]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, -22.4791, 0 )

[node name="ObeliskLight" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0291107, 58.3675, -2.08927 )
script = ExtResource( 15 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.133927, 59.4169, -3.27402 )
light_energy = 4.017
omni_range = 4.104

[node name="ElectricField" parent="." groups=["ElectricFields"] instance=ExtResource( 17 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.894406, 55.5388, 56.4371 )

[node name="ElectricField2" parent="." groups=["ElectricFields"] instance=ExtResource( 17 )]
transform = Transform( 2, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.894406, 89.5613, 63.5491 )

[node name="button" parent="." groups=["Buttons"] instance=ExtResource( 18 )]
transform = Transform( 3.57746e-09, 0, -0.3, 0, 0.3, 0, 0.3, 0, 3.57746e-09, 0.890561, 32.6845, 2.7827 )

[node name="button2" parent="." groups=["Buttons"] instance=ExtResource( 18 )]
transform = Transform( -0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 16.4333, 65.3676, 63.4772 )

[node name="Turret" parent="." groups=["Turrets"] instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.685703, 49.7508, 63.4253 )
script = ExtResource( 19 )

[node name="Turret2" parent="." groups=["Turrets"] instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4513, 65.172, 63.4253 )
script = ExtResource( 19 )
